--- a/css/css/base.css
+++ b/css/css/base.css
@@ -1047,6 +1047,23 @@ body {
   .blueBtnTbl:focus {
     background-color: #001a70; }
 
+.grayBtnTbl {
+  display: inline-block;
+  background-color: rgba(91, 103, 112, 0.8);
+  color: #fff;
+  font-size: 13px;
+  border: none;
+  border-radius: 3px;
+  padding: 3px 8px;
+  transition: all .3s;
+  margin: 0px; }
+  .grayBtnTbl:hover {
+    background-color: rgba(91, 103, 112, 0.5); }
+  .grayBtnTbl:active {
+    background-color: #5b6770; }
+  .grayBtnTbl:focus {
+    background-color: #5b6770; }
+
 .orangeBtnTbl {
   display: inline-block;
   background-color: rgba(255, 158, 27, 0.6);
@@ -2043,5 +2060,166 @@ body {
     background-color: rgba(0, 26, 112, 0.2); }
     .closeBtn:hover span {
       background-color: #001a70; }
+
+.recom_section {
+  padding: 15px; }
+  .recom_section .recom_box {
+    width: 100%;
+    min-height: 100px;
+    border: 1px solid #e1e1e1;
+    background-color: #fdfdfd;
+    padding: 15px;
+    margin-bottom: 15px; }
+    .recom_section .recom_box h4 {
+      display: block;
+      margin: 0px;
+      padding: 10px 10px 20px 10px;
+      font-weight: bold;
+      font-size: 15px;
+      color: #5b6770; }
+    .recom_section .recom_box .row {
+      font-size: 14px;
+      font-weight: normal; }
+      .recom_section .recom_box .row div {
+        padding-bottom: 10px; }
+      .recom_section .recom_box .row .col-xs-3 {
+        color: #5b6770; }
+      .recom_section .recom_box .row label {
+        font-weight: normal;
+        color: #001a70;
+        display: inline-block;
+        white-space: nowrap;
+        margin-right: 10px; }
+      .recom_section .recom_box .row label.high {
+        color: #ba0c2f; }
+      .recom_section .recom_box .row label.accept {
+        color: #628d1b; }
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 22px; }
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0; }
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2) inset; }
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); }
+
+input:checked + .slider {
+  background-color: #628d1b; }
+
+input:focus + .slider {
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); }
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(18px);
+  -ms-transform: translateX(18px);
+  transform: translateX(18px); }
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 18px; }
+
+.slider.round:before {
+  border-radius: 50%; }
+
+.languageSwitch {
+  display: flex;
+  align-items: center;
+  margin-top: 5px; }
+  .languageSwitch label {
+    color: rgba(186, 12, 47, 0.7);
+    padding: 0px 8px; }
+
+.singleSection {
+  padding: 15px 5px;
+  height: calc(100% - 50px); }
+
+.verifyTable {
+  padding: 15px 0px;
+  height: calc(100% - 50px); }
+
+.formTitle {
+  width: 100%;
+  background-color: #ececec;
+  font-size: 16px;
+  font-weight: normal;
+  color: #5b6770;
+  padding: 10px 15px; }
+
+.attachBox {
+  width: 100%;
+  background-color: #ececec;
+  display: flex;
+  margin-top: 25px;
+  padding: 10px 15px;
+  align-items: center; }
+  .attachBox label {
+    margin: 0px;
+    margin-right: 10px; }
+
+.tableBottom {
+  padding: 10px 20px; }
+  .tableBottom .field-wrapper {
+    margin-bottom: 0px; }
+
+.txtCenter {
+  text-align: center; }
+
+.labelGrid {
+  padding: 15px 5px 5px 5px; }
+  .labelGrid .row {
+    padding-top: 10px; }
+    .labelGrid .row div {
+      font-size: 14px; }
+      .labelGrid .row div:nth-child(1) {
+        color: #5b6770; }
+      .labelGrid .row div:nth-child(2) {
+        color: #001a70; }
+
+.decisionHeight {
+  height: calc(100% - 200px);
+  overflow-y: auto;
+  margin-bottom: 15px; }
+
+.decisionHeight::-webkit-scrollbar {
+  width: 5px; }
+
+/* Track */
+.decisionHeight::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1); }
+
+/* Handle */
+.decisionHeight::-webkit-scrollbar-thumb {
+  background: rgba(0, 26, 112, 0.5); }
+
+/* Handle on hover */
+.decisionHeight::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 26, 112, 0.7); }
 
 /*# sourceMappingURL=base.css.map */
