--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -1341,6 +1341,29 @@ body {
         background-color: rgba($blueColor, 1);
     }
 }
+.grayBtnTbl {
+    display: inline-block;
+    background-color: rgba($grayColor, .8);
+    color: $white;
+    font-size: 13px;
+    border: none;
+    border-radius: 3px;
+    padding: 3px 8px;
+    transition: all .3s;
+    margin: 0px;
+
+    &:hover {
+        background-color: rgba($grayColor, .5);
+    }
+
+    &:active {
+        background-color: rgba($grayColor, 1);
+    }
+
+    &:focus {
+        background-color: rgba($grayColor, 1);
+    }
+}
 
 .orangeBtnTbl {
     display: inline-block;
@@ -2708,7 +2731,8 @@ body {
         display: flex;
         position: relative;
         margin-bottom: 15px;
-        &:last-child{
+
+        &:last-child {
             margin-bottom: 0px;
         }
 
@@ -2720,69 +2744,270 @@ body {
                 width: 100%;
             }
         }
-        .simContent{
+
+        .simContent {
             width: calc(100% - 200px);
             padding-left: 15px;
-            h3{
+
+            h3 {
                 margin: 0px;
                 padding: 0px;
                 font-size: 16px;
                 font-weight: bold;
                 color: $blueColor;
             }
-            p{
+
+            p {
                 font-size: 14px;
                 color: $grayColor;
-                margin:0px;
+                margin: 0px;
                 padding: 0px;
                 padding-top: 10px;
                 padding-bottom: 10px;
             }
-            span{
+
+            span {
                 display: block;
                 width: 100%;
                 color: $blueColor;
                 font-size: 15px;
-                label{
+
+                label {
                     color: $grayColor;
                 }
             }
         }
-        .simClose{
+
+        .simClose {
             position: absolute;
             right: 5px;
             top: 5px;
         }
     }
 }
-.closeBtn{
+
+.closeBtn {
     width: 16px;
     height: 16px;
     position: relative;
     margin: 0px;
-    padding:0px;
-    border:none;
+    padding: 0px;
+    border: none;
     background-color: transparent;
     transition: all .2s;
-    span{
+
+    span {
         display: block;
         width: 16px;
         position: absolute;
         height: 1px;
         transition: all .2s;
         background-color: $grayColor;
-        &:nth-child(1){
+
+        &:nth-child(1) {
             transform: rotate(45deg);
         }
-        &:nth-child(2){
+
+        &:nth-child(2) {
             transform: rotate(-45deg);
         }
-        
+
     }
-    &:hover{
-            background-color: rgba($blueColor, .2);
-            span{
-                background-color: $blueColor;
+
+    &:hover {
+        background-color: rgba($blueColor, .2);
+
+        span {
+            background-color: $blueColor;
+        }
+    }
+}
+
+// 26-10-2019
+.recom_section {
+    padding: 15px;
+    .recom_box {
+        width: 100%;
+        min-height: 100px;
+        border: 1px solid #e1e1e1;
+        background-color: #fdfdfd;
+        padding: 15px;
+        margin-bottom: 15px;
+        h4{
+            display: block;
+            margin: 0px;
+            padding: 10px 10px 20px 10px;
+            font-weight: bold;
+            font-size: 15px;
+            color:$grayColor;
+        }
+        .row{
+            font-size: 14px;
+            font-weight: normal;
+            div{
+                padding-bottom: 10px;
+            }
+            .col-xs-3{
+                color: $grayColor;
+            }
+            label{
+                font-weight: normal;
+                color: $blueColor;
+                display: inline-block;
+                white-space: nowrap;
+                margin-right: 10px;
+            }
+            label.high{
+                color: $redColor;
+            }
+            label.accept{
+                color: $greenColor;
             }
         }
+    }
 }
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 22px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  box-shadow: 0 0 3px rgba(0,0,0,.2) inset;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  box-shadow: 0 0 3px rgba(0,0,0,.2);
+}
+
+input:checked + .slider {
+  background-color: $greenColor;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 3px rgba(0,0,0,.2);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(18px);
+  -ms-transform: translateX(18px);
+  transform: translateX(18px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 18px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+.languageSwitch{
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+    label{
+        color:rgba($redColor, .7);
+        padding: 0px 8px;
+    }
+}
+.singleSection{
+    padding: 15px 5px;
+    height: calc(100% - 50px);
+}
+.verifyTable{
+    padding: 15px 0px;
+    height: calc(100% - 50px);
+}
+.formTitle{
+    width: 100%;
+    background-color: #ececec;
+    font-size: 16px;
+    font-weight: normal;
+    color: $grayColor;
+    padding: 10px 15px;
+}
+.attachBox{
+    width: 100%;
+    background-color: #ececec;
+    display: flex;
+    margin-top: 25px;
+    padding: 10px 15px;
+    align-items: center;
+    label{
+        margin:0px;
+        margin-right: 10px;
+    }
+}
+.tableBottom{
+    padding: 10px 20px;
+    .field-wrapper{
+        margin-bottom: 0px;
+    }
+}
+.txtCenter{
+    text-align: center;
+}
+.labelGrid{
+    padding: 15px 5px 5px 5px;
+    .row{
+        padding-top: 10px;
+        div{
+            font-size: 14px;
+            &:nth-child(1){
+                color: $grayColor;
+            }
+            &:nth-child(2){
+                color: $blueColor;
+            }
+        }
+    }
+}
+.decisionHeight{
+    height: calc(100% - 200px);
+    overflow-y: auto;
+    margin-bottom: 15px;
+}
+.decisionHeight::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        /* Track */
+        .decisionHeight::-webkit-scrollbar-track {
+            background: rgba(0, 0, 0, .1);
+        }
+
+        /* Handle */
+        .decisionHeight::-webkit-scrollbar-thumb {
+            background: rgba(0, 26, 112, 0.5);
+        }
+
+        /* Handle on hover */
+        .decisionHeight::-webkit-scrollbar-thumb:hover {
+            background: rgba(0, 26, 112, .7);
+        }
