--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -1341,6 +1341,7 @@ body {
         background-color: rgba($blueColor, 1);
     }
 }
+
 .grayBtnTbl {
     display: inline-block;
     background-color: rgba($grayColor, .8);
@@ -1618,6 +1619,7 @@ body {
 
 .contentLimit {
     height: calc(100% - 40px);
+    overflow-y: auto;
 }
 
 .footButtonGroup {
@@ -2826,6 +2828,7 @@ body {
 // 26-10-2019
 .recom_section {
     padding: 15px;
+
     .recom_box {
         width: 100%;
         min-height: 100px;
@@ -2833,118 +2836,131 @@ body {
         background-color: #fdfdfd;
         padding: 15px;
         margin-bottom: 15px;
-        h4{
+
+        h4 {
             display: block;
             margin: 0px;
             padding: 10px 10px 20px 10px;
             font-weight: bold;
             font-size: 15px;
-            color:$grayColor;
+            color: $grayColor;
         }
-        .row{
+
+        .row {
             font-size: 14px;
             font-weight: normal;
-            div{
+
+            div {
                 padding-bottom: 10px;
             }
-            .col-xs-3{
+
+            .col-xs-3 {
                 color: $grayColor;
             }
-            label{
+
+            label {
                 font-weight: normal;
                 color: $blueColor;
                 display: inline-block;
                 white-space: nowrap;
                 margin-right: 10px;
             }
-            label.high{
+
+            label.high {
                 color: $redColor;
             }
-            label.accept{
+
+            label.accept {
                 color: $greenColor;
             }
         }
     }
 }
+
 .switch {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 22px;
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 22px;
 }
 
-.switch input { 
-  opacity: 0;
-  width: 0;
-  height: 0;
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
 .slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-  box-shadow: 0 0 3px rgba(0,0,0,.2) inset;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    box-shadow: 0 0 3px rgba(0, 0, 0, .2) inset;
 }
 
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 18px;
-  width: 18px;
-  left: 2px;
-  bottom: 2px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-  box-shadow: 0 0 3px rgba(0,0,0,.2);
+    position: absolute;
+    content: "";
+    height: 18px;
+    width: 18px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    box-shadow: 0 0 3px rgba(0, 0, 0, .2);
 }
 
-input:checked + .slider {
-  background-color: $greenColor;
+input:checked+.slider {
+    background-color: $greenColor;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 3px rgba(0,0,0,.2);
+input:focus+.slider {
+    box-shadow: 0 0 3px rgba(0, 0, 0, .2);
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(18px);
-  -ms-transform: translateX(18px);
-  transform: translateX(18px);
+input:checked+.slider:before {
+    -webkit-transform: translateX(18px);
+    -ms-transform: translateX(18px);
+    transform: translateX(18px);
 }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 18px;
+    border-radius: 18px;
 }
 
 .slider.round:before {
-  border-radius: 50%;
+    border-radius: 50%;
 }
-.languageSwitch{
+
+.languageSwitch {
     display: flex;
     align-items: center;
     margin-top: 5px;
-    label{
-        color:rgba($redColor, .7);
+
+    label {
+        color: rgba($redColor, .7);
         padding: 0px 8px;
     }
 }
-.singleSection{
+
+.singleSection {
     padding: 15px 5px;
     height: calc(100% - 50px);
 }
-.verifyTable{
+
+.verifyTable {
     padding: 15px 0px;
     height: calc(100% - 50px);
 }
-.formTitle{
+
+.formTitle {
     width: 100%;
     background-color: #ececec;
     font-size: 16px;
@@ -2952,62 +2968,165 @@ input:checked + .slider:before {
     color: $grayColor;
     padding: 10px 15px;
 }
-.attachBox{
+
+.attachBox {
     width: 100%;
     background-color: #ececec;
     display: flex;
     margin-top: 25px;
     padding: 10px 15px;
     align-items: center;
-    label{
-        margin:0px;
+
+    label {
+        margin: 0px;
         margin-right: 10px;
     }
 }
-.tableBottom{
+
+.tableBottom {
     padding: 10px 20px;
-    .field-wrapper{
+
+    .field-wrapper {
         margin-bottom: 0px;
     }
 }
-.txtCenter{
+
+.txtCenter {
     text-align: center;
 }
-.labelGrid{
+
+.labelGrid {
     padding: 15px 5px 5px 5px;
-    .row{
+
+    .row {
         padding-top: 10px;
-        div{
+
+        div {
             font-size: 14px;
-            &:nth-child(1){
+
+            &:nth-child(1) {
                 color: $grayColor;
             }
-            &:nth-child(2){
+
+            &:nth-child(2) {
                 color: $blueColor;
             }
         }
     }
 }
-.decisionHeight{
+
+.decisionHeight {
     height: calc(100% - 200px);
     overflow-y: auto;
     margin-bottom: 15px;
 }
+
 .decisionHeight::-webkit-scrollbar {
-            width: 5px;
-        }
+    width: 5px;
+}
 
-        /* Track */
-        .decisionHeight::-webkit-scrollbar-track {
-            background: rgba(0, 0, 0, .1);
-        }
+/* Track */
+.decisionHeight::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, .1);
+}
 
-        /* Handle */
-        .decisionHeight::-webkit-scrollbar-thumb {
-            background: rgba(0, 26, 112, 0.5);
-        }
+/* Handle */
+.decisionHeight::-webkit-scrollbar-thumb {
+    background: rgba(0, 26, 112, 0.5);
+}
 
-        /* Handle on hover */
-        .decisionHeight::-webkit-scrollbar-thumb:hover {
-            background: rgba(0, 26, 112, .7);
+/* Handle on hover */
+.decisionHeight::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 26, 112, .7);
+}
+
+.customCheck {
+    margin-top: 25px;
+    font-size: 14px;
+    cursor: pointer;
+}
+.customCheck input[type="checkbox"]:checked:after, .customCheck .checkbox input[type="checkbox"]:checked:after, .customCheck .checkbox-inline input[type="checkbox"]:checked:after{
+    background-color: #b5b5b5;
+    border-color: #b5b5b5;
+}
+.customCheck input[type="checkbox"]:focus:after, .customCheck .checkbox input[type="checkbox"]:focus:after, .customCheck .checkbox-inline input[type="checkbox"]:focus:after{
+    border-color: #b5b5b5;
+}
+.formBtns{
+    margin-top: 25px;
+    .customBtn{
+        margin-right: 10px;
+        &:last-child{
+            margin-right: 0px;
         }
+    }
+}
+.gridTbl{
+    margin-top: 25px;
+    padding: 0px;
+}
+.dashBG{
+    background-color: #f9f9f9;
+    border:1px solid #e2e2e2;
+    .row{
+        .radioNone{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            -webkit-appearance:none;
+        }
+        button{
+            width: 100%;
+            margin:15px 5px;
+            text-align: left;
+            background-color: #e1e1e3;
+            border:1px solid #cfcfcf;
+            border-radius: 4px;
+            overflow:hidden;
+            padding: 0px;
+            font-size: 13px;
+            font-weight: bold;
+            color: $blueColor;
+            transition: all .2s;
+            &:hover, &:focus{
+                background-color: #fff;
+            }
+            i{
+                background-color: #f1f1f3;
+                color: $grayColor;
+                border:none;
+                border-right: 1px solid #cfcfcf;
+                padding: 8px 8px;
+                margin-right: 8px;
+                font-size: 15px;
+            }
+        }
+        .col-xs-6{
+            &:last-child{
+                button{
+                    width: calc(100% - 10px);
+                }
+            }
+        }
+    }
+}
+.tableContainer .customTable1 tr td{
+    .customCheck {
+        margin:0px; 
+    }
+}
+.dashContainer{
+    .field-wrapper{
+        margin-top: 25px;
+    }
+    h3{
+        font-size: 15px;
+        font-weight: bold;
+        color: $blueColor;
+    }
+    h4{
+        font-size: 15px;
+        font-weight: bold;
+        color: $grayColor;
+    }
+}
